--- a/website/index.html
+++ b/website/index.html
@@ -6,10 +6,20 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/reset.css" rel="stylesheet">
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+<!--    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>-->
+<!--    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>-->
+    <style>
+        svg text {
+            fill: #fff;
+        }
+    </style>
     <title>Analytics</title>
 </head>
 <body>
     <h2>Analytics home page</h2>
+
+    <svg width="960" height="500"></svg>
 
     <script src="js/main.js"></script>
 </body>
