--- a/website/index.html
+++ b/website/index.html
@@ -9,12 +9,25 @@
     <script src="js/echarts.min.js"></script>
     <script src="js/dark.js"></script>
     <title>Analytics</title>
+    
+    <style>
+        body {
+            width: 100%;
+            height: 100vh;
+        }
+        #app {
+            width: 100%;
+            height: 100%;
+            display: grid;
+            place-items: center;
+            background-color: #0b0b0edb;
+        }
+    </style>
 </head>
 <body>
-    <h2>Analytics home page</h2>
-    
+<div id="app">
     <div id="main" style="width: 600px; height: 450px"></div>
-
-    <script src="js/main.js"></script>
+</div>
+<script src="js/main.js"></script>
 </body>
 </html>
